fixed authentication config issues